[tool.poetry]
name = "brioa_port"
version = "0.1.0"
description = "Tools for interpreting data relating to the seaport in Itapoá, Brazil."
authors = ["yurihs"]
homepage = "https://github.com/yurihs/brioa_port"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.7"
schedule = "^0.5.0"
docopt = "^0.6.2"
sqlalchemy = "^1.2"
pandas = "^0.23.4"
numpy = "^1.16"
xlrd_no_sector_corruption_check = "^1.2"
Pillow = "^5.4"
Babel = "^2.6"
tqdm = "^4.30"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.650.0"
pytest-mock = "^1.10"
pytest-cov = "^2.6"

[tool.poetry.scripts]
brioa_webcam_downloader = "brioa_port.scripts.brioa_webcam_downloader:main"
brioa_schedule = "brioa_port.scripts.brioa_schedule:main"
brioa_timelapse_creator = "brioa_port.scripts.brioa_timelapse_creator:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
